--- a/Cajero+/index.html
+++ b/Cajero+/index.html
@@ -18,16 +18,18 @@
         
       <form id="Form"> 
         <!-- <label for="name" id="name1"> ingrese datos</label> -->
-        <label for="name" id="name1"> ingrese monto</label>
+        <label for="name" id="name1"> ingrese nombre</label>
         <input type="text" id="name" name="name" required
-        minlength="4" maxlength="8" size="10" >
+        minlength="1" maxlength="8" size="10" >
         <button type="submit">Confirmar</button>
     </form>
        
      </div>
      </center>
 </div>
-  <div></div>
+  <div>
+
+  </div>
     <script src="./index.js"></script>
 </body>
 </html>
