trabajo listo ver detalles

--- a/Cajero+/cajero(prueba2mal)/index.html
+++ b/Cajero+/cajero(prueba2mal)/index.html
@@ -24,6 +24,21 @@
         <button type="submit">Confirmar</button>
     </form>
        
+
+    <!-- codigo de abajo sin funcionar de momento -->
+    <!-- <form id="Form"> 
+      <label for="name" id="name1"> ingrese datos</label> -->
+      <!-- <label for="name" id="contra1"> ingrese pin (4digitos)</label>
+      <input type="text" id="contra" name="name" required
+      minlength="1" maxlength="8" size="10" >
+      <button type="submit">Confirmar</button>
+  </form>
+      -->
+
+    <!-- resultados del inicio de secion como barra de opciones-->
+    
+
+
      </div>
      </center>
 </div>
