--- a/Cajero+/cajero1/index.html
+++ b/Cajero+/cajero1/index.html
@@ -33,7 +33,7 @@
     <section class="login-box">
       
       
-      <h1 class="etiqueta bold" style="margin-top:15px;">¡Bienvenido al Banco Fatun!</h1>
+      <h1 class="etiqueta bold" style="margin-top:15px;">¡Bienvenido al Banco Fatum!</h1>
       <p class="marginBtm etiqueta">   Favor de ingresar su No. de cuenta y pin </p>
 
       <div class="contenedorInput">
