--- a/Cajero+/cajero1/index.html
+++ b/Cajero+/cajero1/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="index.js"></script>
-    <title>Cuestionario Covid</title>
+    <title>Banco Fatum (destino)</title>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
